--- a/roles/docker/templates/prometheus.yml.j2
+++ b/roles/docker/templates/prometheus.yml.j2
@@ -12,7 +12,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: http://{{ inventory_hostname }}:9090
+  url: http://{{ host }}:9090
   # <bool> mark as default datasource. Max one per org
   isDefault: true
   # <map> fields that will be converted to json and stored in json_data
